--- a/templates/User/mybloodrequest.html
+++ b/templates/User/mybloodrequest.html
@@ -5,7 +5,7 @@
 {% block content %}
 <br><br>
 <div class="mx-auto" style="width: 80vw;">
-    <H4 class="text-center" ><strong>My Blood Request</strong></H4>
+    <H4 class="text-center" ><strong>My Blood Request Story</strong></H4>
     <table class="table table-light table-hover table-bordered table-striped">
         <thead class="bg-danger">
             <tr>
@@ -27,12 +27,35 @@
                 <td>{{t.unit}}</td>
                 <td>{{t.request_date}}</td>
                 {% if t.status == 'Approved' %}
-                <td><span class="label warning"> Approved</span></td>
+                <td><span class="bg-success"> Approved</span></td>
                 
                 {% elif t.status == 'Rejected' %}
-                <td><span class="label success">Rejected</span></td>
+                <td><span class="bg-danger">Rejected 
+                    <!-- Button trigger modal -->
+                     <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#exampleModal">Reason</button></td>
+                <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header bg-danger">
+                            <h5 class="modal-title" id="exampleModalLabel">Rejection Message</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                            <div class="modal-body">
+                                <h3><strong>{{ t.response_message }}</strong></h3>
+                            </div>
+                            <div class="modal-footer bg-info">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    </span>
+                </div>
                 {% else %}
-                <td><span style="color: black;margin-left: 0px;" class="label dark">Pending</span></td>
+                <td><span style="color: black;margin-left: 0px;" class="bg-info">Pending</span></td>
                 {% endif %} 
                 
 
@@ -43,4 +66,73 @@
     
     </table>
 </div>
+<br><br>
+
+<div class="mx-auto" style="width: 80vw;">
+    <H4 class="text-center" ><strong>My Donation Request History</strong></H4>
+    <table class="table table-light table-hover table-bordered table-striped">
+        <thead class="bg-danger">
+            <tr>
+                <th scope="col">Donor Name</th>
+                <th scope="col">Conatact</th>
+                <th scope="col">Donor Age</th>
+                <th scope="col">Blood Group</th>
+                <th scope="col">Campaign ID</th>
+                <th scope="col">Request Date</th>
+                <th scope="col">Response Date</th>
+                <th scope="col">Status</th>
+                
+            </tr>
+        </thead>
+        <tbody>
+            {% for t in donationrequest %}
+            <tr>
+                <td> {{t.name}}</td>
+                <td>{{t.email}}</td>
+                <td>{{t.age}}</td>
+                <td>{{t.bloodgroup}}</td>
+                <td>{{t.campaignid}}</td>
+                <td>{{t.request_date}}</td>
+                <td>{{t.response_date}}</td>
+                {% if t.status == 'Approved' %}
+                <td><span class="bg-success"> Approved</span></td>
+                
+                {% elif t.status == 'Rejected' %}
+                <td><span class="bg-danger">Rejected &nbsp &nbsp &nbsp
+                    <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Reason</button></td>
+                <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header bg-danger">
+                            <h5 class="modal-title" id="exampleModalLabel">Rejection Message</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                            <div class="modal-body">
+                                <h3><strong>{{ t.response_message }}</strong></h3>
+                            </div>
+                            <div class="modal-footer bg-info">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    </span>
+                </div>
+                {% else %}
+                <td><span style="color: black;margin-left: 0px;" class="bg-info">Pending</span></td>
+                {% endif %} 
+                
+
+            </tr>
+            {% endfor %} 
+
+        </tbody>
+    
+    </table>
+</div>
+                    
 {% endblock content %}
