Donation part + Donation certificate feature added

--- a/templates/Admin/admin_dash_base.html
+++ b/templates/Admin/admin_dash_base.html
@@ -169,7 +169,7 @@
             <li><a style="text-decoration:none;" href="{% url 'view_client' %}"><i class="fas fa-sync-alt"></i>Clients</a></li>
             <li><a style="text-decoration:none;" href="/admin/view-bloodrequests/"><i class="fas fa-sync-alt"></i>Blood Requests</a></li>
             <li><a style="text-decoration:none;" href="{% url 'view_donation_request' %}"><i class="fas fa-history"></i>Donation Requests</a></li>
-            <li><a style="text-decoration:none;" href="/admin/blood-stock"><i class="fas fa-history"></i>Stocks</a></li>
+            <li><a style="text-decoration:none;" href="/admin/blood-stock"><i class="fas fa-history"></i>Stock Management</li>
             <li><a style="text-decoration:none;" href="{% url 'Create_Campaign' %}"><i class="fas fa-sync-alt"></i>Campaigns</a></li>
             <li><a style="text-decoration:none;" href="{% url 'view_history' %}"><i class="fas fa-sync-alt"></i>History</a></li>
         </ul> 
